--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to CC seminar!</h1>
+    <h1>Welcome to CC seminar May 5th, 2025!</h1>
 </body>
 </html>
